--- a/application/backend/src/main/resources/libs/bulma/components/navbar/navbar.html
+++ b/application/backend/src/main/resources/libs/bulma/components/navbar/navbar.html
@@ -20,7 +20,9 @@
   <sly data-sly-set.classes="navbar ${model.navbarStyle}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
     <nav class="${classes}" role="navigation" aria-label="main navigation" >
-      <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+      <div class="container ${model.containerStyle}">
+        <sly data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
+      </div>
     </nav>
   </sly>
   <sly data-sly-test="${!resource.hasChildren}">
