WOS-185 added "add subtitle" checkbox

--- a/application/backend/src/main/resources/libs/bulma/components/title/title.html
+++ b/application/backend/src/main/resources/libs/bulma/components/title/title.html
@@ -20,4 +20,7 @@
   <h1 data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.text}
   </h1>
+  <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '}">
+    ${model.subtitle}
+  </h1>
 </sly>
