--- a/application/frontend/src/common/_common.scss
+++ b/application/frontend/src/common/_common.scss
@@ -1,6 +1,6 @@
 /*!
  * <!--
- *     Copyright (C) 2022 Dynamic Solutions
+ *     Copyright (C) 2023 Dynamic Solutions
  *
  *     Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
  * -->
  */
 
-@import './components/index';
-@import 'bulma';
-@import './common/index';
+ /* Bulma's <strong> tag has color by default, which can cause unpredictable behavior since we manipulate color e.g. in Rich Text Editor. https://github.com/jgthms/bulma/issues/821 */
+ strong {
+    color: inherit;
+ }
