Wos 185 title with subtitle (#188)
* WOS-185 added "add subtitle" checkbox

* WOS-185 subtitle config display

* WOS-185 fix tests

* WOS-185 added sly test

* WOS-185 fixed description

--- a/application/backend/src/main/resources/libs/bulma/components/title/title.html
+++ b/application/backend/src/main/resources/libs/bulma/components/title/title.html
@@ -20,4 +20,9 @@
   <h1 data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.text}
   </h1>
+  <sly data-sly-test="${model.addSubtitle}">
+    <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '}">
+      ${model.subtitle}
+    </h1>
+  </sly>
 </sly>
