WOS-179 Icon: reimplemented icon size property support

--- a/application/backend/src/main/resources/libs/bulma/components/icon/template.html
+++ b/application/backend/src/main/resources/libs/bulma/components/icon/template.html
@@ -13,9 +13,9 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 */-->
-<template data-sly-template.icon="${ @ colorOnText, textVariant, icon, addText, label, size}">
-    <span class="icon ${size} ${!colorOnText  && textVariant ? textVariant : ''}">
-      <i class="${icon}"></i>
+<template data-sly-template.icon="${ @ colorOnText, textVariant, icon, addText, label, containerSize, iconSize}">
+    <span class="icon ${containerSize} ${!colorOnText  && textVariant ? textVariant : ''}">
+      <i class="${iconSize} ${icon}"></i>
     </span>
     <sly data-sly-test="${addText}">
         <span>${label}</span>
