--- a/application/backend/src/main/resources/libs/bulma/components/icon/icon.html
+++ b/application/backend/src/main/resources/libs/bulma/components/icon/icon.html
@@ -25,7 +25,7 @@
       <sly data-sly-use.template="./template.html"
            data-sly-call="${template.icon @
              colorOnText=model.colorOnText, textVariant=model.textVariant,
-             icon=model.icon, addText=model.addText, label=model.label, size=model.size}"></sly>
+             icon=model.icon, addText=model.addText, label=model.label, containerSize=model.containerSize, iconSize=model.iconSize}"></sly>
     </div>
   </sly>
   <sly data-sly-test="${model.elementType == 'span'}">
@@ -34,7 +34,7 @@
       <sly data-sly-use.template="./template.html"
            data-sly-call="${template.icon @
            colorOnText=model.colorOnText, textVariant=model.textVariant,
-           icon=model.icon, addText=model.addText, label=model.label, size=model.size}"></sly>
+           icon=model.icon, addText=model.addText, label=model.label, containerSize=model.containerSize, iconSize=model.iconSize}"></sly>
     </span>
   </sly>
 </sly>
