--- a/application/frontend/src/components/LevelItem/level-item.scss
+++ b/application/frontend/src/components/LevelItem/level-item.scss
@@ -1,6 +1,6 @@
 /*!
  * <!--
- *     Copyright (C) 2022 Dynamic Solutions
+ *     Copyright (C) 2023 Dynamic Solutions
  *
  *     Licensed under the Apache License, Version 2.0 (the "License");
  *     you may not use this file except in compliance with the License.
@@ -16,6 +16,8 @@
  * -->
  */
 
- @import 'bulma';
-@import './components/index';
-@import './common/index';
+.level-item { 
+    & > .content {
+        margin-bottom: 0;
+    }
+}
