--- a/application/backend/src/main/resources/libs/bulma/components/level/levelitem/levelitem.html
+++ b/application/backend/src/main/resources/libs/bulma/components/level/levelitem/levelitem.html
@@ -19,7 +19,7 @@
 <sly data-sly-use.model="pl.ds.bulma.components.models.level.LevelItemComponent">
   <sly data-sly-set.classes="level-item ${model.alignment} ${model.alignmentVertical}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
-    <div data-sly-element=${model.elementType} class="${classes}">
+    <div class="${classes}">
       <sly
           data-sly-include="${'parsys.html' @ prependPath='/libs/wcm/foundation/components/parsys'}"></sly>
     </div>
