Feature/wsio 56 level component configuration (#197)
* WSIO-56 Level Component configuration
Added the vertical alignment for item component
Added the classes property for template of the item level component

* WSIO-56 Level Component configuration

--- a/application/backend/src/main/resources/libs/bulma/components/level/levelitem/levelitem.html
+++ b/application/backend/src/main/resources/libs/bulma/components/level/levelitem/levelitem.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.level.LevelItemComponent">
-  <sly data-sly-set.classes="level-item ${model.alignment} ${model.alignmentVertical}"></sly>
+  <sly data-sly-set.classes="level-item ${model.alignment} ${model.alignmentVertical} ${model.classes}"></sly>
   <sly data-sly-test="${resource.hasChildren}">
     <div class="${classes}">
       <sly
