WOS-190 Icon: added support for material design icons

--- a/application/backend/src/main/resources/libs/bulma/components/page/head-libs.html
+++ b/application/backend/src/main/resources/libs/bulma/components/page/head-libs.html
@@ -19,5 +19,6 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
       integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
       crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.materialdesignicons.com/7.2.96/css/materialdesignicons.min.css" crossorigin="anonymous">
 <link rel="stylesheet" href="/libs/bulma/web_root/main.css" type="text/css">
 <link data-sly-test="${wcmmode.isEdit}" href="/libs/bulma/author/author.css" rel="stylesheet" type="text/css">
