WOS-190 Button: added new icon mechanism support

--- a/application/backend/src/main/resources/libs/bulma/components/button/button.html
+++ b/application/backend/src/main/resources/libs/bulma/components/button/button.html
@@ -22,7 +22,10 @@
                 <sly data-sly-use.template="./template.html"
                      data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconRight=model.iconRight}"></sly>
+             icon=model.icon, iconRight=model.iconRight,
+             iconSize=model.iconSize, containerSize=model.containerSize,
+             iconLibType=model.iconLibType, iconSizeRight=model.iconSizeRight,
+             containerSizeRight=model.containerSizeRight, iconLibTypeRight=model.iconLibTypeRight}"></sly>
             </button>
         </sly>
         <sly data-sly-test="${!disabled}">
@@ -32,7 +35,10 @@
                     <sly data-sly-use.template="./template.html"
                          data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconRight=model.iconRight}"></sly>
+             icon=model.icon, iconRight=model.iconRight,
+             iconSize=model.iconSize, containerSize=model.containerSize,
+             iconLibType=model.iconLibType, iconSizeRight=model.iconSizeRight,
+             containerSizeRight=model.containerSizeRight, iconLibTypeRight=model.iconLibTypeRight}"></sly>
                 </button>
             </sly>
 
@@ -41,7 +47,10 @@
                     <sly data-sly-use.template="./template.html"
                          data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconRight=model.iconRight}"></sly>
+             icon=model.icon, iconRight=model.iconRight,
+             iconSize=model.iconSize, containerSize=model.containerSize,
+             iconLibType=model.iconLibType, iconSizeRight=model.iconSizeRight,
+             containerSizeRight=model.containerSizeRight, iconLibTypeRight=model.iconLibTypeRight}"></sly>
                 </button>
             </sly>
         </sly>
@@ -52,7 +61,10 @@
             <sly data-sly-use.template="./template.html"
                  data-sly-call="${template.buttonContent @
              label=model.label, addIcon=model.addIcon,
-             icon=model.icon, iconRight=model.iconRight}"></sly>
+             icon=model.icon, iconRight=model.iconRight,
+             iconSize=model.iconSize, containerSize=model.containerSize,
+             iconLibType=model.iconLibType, iconSizeRight=model.iconSizeRight,
+             containerSizeRight=model.containerSizeRight, iconLibTypeRight=model.iconLibTypeRight}"></sly>
         </a>
     </sly>
 </sly>
