--- a/application/backend/src/main/resources/libs/bulma/components/button/template.html
+++ b/application/backend/src/main/resources/libs/bulma/components/button/template.html
@@ -1,5 +1,5 @@
 <!--/*
-    Copyright (C) 2022 Dynamic Solutions
+    Copyright (C) 2023 Dynamic Solutions
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -13,16 +13,16 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 */-->
-<template data-sly-template.buttonContent="${ @ label, addIcon, icon, iconRight}">
+<template data-sly-template.buttonContent="${ @ label, addIcon, icon, iconRight, iconSize, containerSize, iconLibType, iconSizeRight, containerSizeRight, iconLibTypeRight}">
     <sly data-sly-test="${addIcon && icon}">
-          <span class="icon">
-            <i class="${icon}"></i>
+          <span class="icon ${containerSize}">
+            <i class="${iconLibType} ${iconSize} ${icon}"></i>
           </span>
     </sly>
     <span data-sly-unwrap="${label == ''}">${label}</span>
     <sly data-sly-test="${addIcon && iconRight}">
-          <span class="icon">
-            <i class="${iconRight}"></i>
+          <span class="icon ${containerSizeRight}">
+            <i class="${iconLibTypeRight} ${iconSizeRight} ${iconRight}"></i>
           </span>
     </sly>
 </template>
