--- a/application/backend/src/main/resources/libs/bulma/components/panel/panelblock/panelblock.html
+++ b/application/backend/src/main/resources/libs/bulma/components/panel/panelblock/panelblock.html
@@ -1,6 +1,6 @@
 <!--/*
   ~
-  ~     Copyright (C) 2022 Dynamic Solutions
+  ~     Copyright (C) 2023 Dynamic Solutions
   ~
   ~     Licensed under the Apache License, Version 2.0 (the "License");
   ~     you may not use this file except in compliance with the License.
@@ -18,9 +18,9 @@
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.panel.PanelBlockComponent">
   <sly data-sly-test="${resource.hasChildren}">
-      <a class="panel-block" id="${model.id}">
-        <sly data-sly-test="${model.icon}">
-          <span class="panel-icon"><i class="${model.icon}" aria-hidden="true"></i></span>
+      <a class="panel-block ${model.containerSize}" id="${model.id}">
+        <sly data-sly-test="${model.addIcon && model.icon}">
+          <span class="panel-icon"><i class="${model.iconLibType} ${model.iconSize} ${model.icon}" aria-hidden="true"></i></span>
         </sly>
         <sly data-sly-list="${resource.children}">
           <sly data-sly-resource="${item}"></sly>
