--- a/application/backend/src/main/resources/libs/bulma/components/image/image.html
+++ b/application/backend/src/main/resources/libs/bulma/components/image/image.html
@@ -23,8 +23,13 @@
            data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
     </div>
   </sly>
-  <figure class="image ${model.style}">
-    <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}"
-         alt="${model.alt}">
-  </figure>
+  <sly data-sly-test="${!model.isSvg}">
+    <figure class="image ${model.style}">
+      <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}"
+           alt="${model.alt}">
+    </figure>
+  </sly>
+  <sly data-sly-test="${model.isSvg}">
+    <span class="image ${model.style}">${model.assetLink @ context='unsafe'}</span>
+  </sly>
 </sly>
