--- a/application/backend/src/main/resources/libs/bulma/components/tabs/tab/tab.html
+++ b/application/backend/src/main/resources/libs/bulma/components/tabs/tab/tab.html
@@ -1,6 +1,6 @@
 <!--/*
   ~
-  ~     Copyright (C) 2022 Dynamic Solutions
+  ~     Copyright (C) 2023 Dynamic Solutions
   ~
   ~     Licensed under the Apache License, Version 2.0 (the "License");
   ~     you may not use this file except in compliance with the License.
@@ -27,8 +27,8 @@
                                 <li class="${model.label == item.label ? 'is-active' : ''}"
                                     data-target="${item.label}">
                                     <a>
-                                        <sly data-sly-test="${item.icon}">
-                                                <span class="icon is-small"><i class="${item.icon}"
+                                        <sly data-sly-test="${item.addIcon && item.icon}">
+                                                <span class="icon ${item.containerSize}"><i class="${item.iconLibType} ${item.iconSize} ${item.icon}"
                                                                                aria-hidden="true"></i></span>
                                         </sly>
                                         <span>${item.label}</span>
@@ -58,8 +58,8 @@
     <sly data-sly-test="${!wcmmode.isEdit}">
         <li data-target="${resource.path}">
             <a>
-                <sly data-sly-test="${model.icon}">
-                    <span class="icon is-small"><i class="${model.icon}" aria-hidden="true"></i></span>
+                <sly data-sly-test="${model.addIcon && model.icon}">
+                    <span class="icon ${model.containerSize}"><i class="${model.iconLibType} ${model.iconSize} ${model.icon}" aria-hidden="true"></i></span>
                 </sly>
                 <span>${model.label}</span>
             </a>
