WOS-167 Title and Content components: added new component properties … (#174)

--- a/application/backend/src/main/resources/libs/bulma/components/content/content.html
+++ b/application/backend/src/main/resources/libs/bulma/components/content/content.html
@@ -17,7 +17,7 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.ContentComponent">
-    <div class="content ${model.size} ${model.textWeight}">
+    <div class="content ${model.size} ${model.textWeight} ${model.textColorVariant}">
         ${model.text @ context='html'}
     </div>
 </sly>
