WOS-199 Navbar item: fixed image width and height properties

--- a/application/backend/src/main/resources/libs/bulma/components/navbar/navbaritem/navbaritem.html
+++ b/application/backend/src/main/resources/libs/bulma/components/navbar/navbaritem/navbaritem.html
@@ -29,7 +29,7 @@
   </sly>
   <sly data-sly-test="${model.type == 'image'}">
     <a class="navbar-item">
-      <img src="${model.image.src}" width="imageWidth" height="imageHeight"
+      <img src="${model.image.src}" width="${model.imageWidth}" height="${model.imageHeight}"
            alt="${model.image.alt}">
     </a>
   </sly>
