--- a/application/backend/src/main/resources/libs/bulma/components/page/body.html
+++ b/application/backend/src/main/resources/libs/bulma/components/page/body.html
@@ -16,11 +16,9 @@
   ~
 */-->
 
-<sly data-sly-use.model="pl.ds.bulma.components.models.PageComponent">
 <sly data-sly-set.navbarFixed="${properties.navbarFixed}"></sly>
 <sly data-sly-set.position="${properties.navbarFixedPosition}"></sly>
 
-<body data-config='{"contactForm": "${model.configEndpoint}"}' class="${properties.defaultTemplateCSS} ${navbarFixed ? position : ''}">
+<body class="${properties.defaultTemplateCSS} ${navbarFixed ? position : ''}">
 <sly data-sly-include="body-content.html"></sly>
 </body>
-</sly>
