WOS-208 Image: Added missing iframe closing tag

--- a/application/backend/src/main/resources/libs/bulma/components/image/image.html
+++ b/application/backend/src/main/resources/libs/bulma/components/image/image.html
@@ -27,6 +27,7 @@
     <sly data-sly-test="${model.isVideo}">
       <iframe class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}"
            alt="${model.alt}">
+      </iframe>
     </sly>
     <sly data-sly-test="${!model.isVideo}">
       <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}"
