Feature/wos 192 support for svg images in image component (#207)
* WOS-192 Support for svg images in Image component

* WOS-192 Support svg images

* WOS-192 Support svg images
License fix.

* WOS-192 Support svg images
Tests fix.

--- a/application/backend/src/main/resources/libs/bulma/components/image/image.html
+++ b/application/backend/src/main/resources/libs/bulma/components/image/image.html
@@ -23,8 +23,9 @@
            data-sly-resource="${paragraph.path @ resourceType=paragraph.resourceType}"></sly>
     </div>
   </sly>
-  <figure class="image ${model.style}">
-    <sly data-sly-test="${model.isVideo}">
+  <sly data-sly-test="${!model.isSvg}">
+    <figure class="image ${model.style}">
+      <sly data-sly-test="${model.isVideo}">
       <iframe class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}"
            alt="${model.alt}">
       </iframe>
@@ -33,5 +34,9 @@
       <img class="${model.isRounded ? 'is-rounded' : ''}" src="${model.assetReference}"
            alt="${model.alt}">
     </sly>
-  </figure>
+    </figure>
+  </sly>
+  <sly data-sly-test="${model.isSvg}">
+    <span class="image ${model.style}">${model.assetLink @ context='unsafe'}</span>
+  </sly>
 </sly>
