WSIO-179 listing numbers on content component fixed when starting from number bigger than 1

--- a/application/backend/src/main/resources/libs/bulma/components/content/content.html
+++ b/application/backend/src/main/resources/libs/bulma/components/content/content.html
@@ -18,6 +18,6 @@
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.ContentComponent">
     <div class="content ${model.size} ${model.textWeight} ${model.textColorVariant}">
-        ${model.text @ context='html'}
+        ${model.text @ context='unsafe'}
     </div>
 </sly>
