--- a/application/backend/src/main/resources/libs/bulma/components/title/title.html
+++ b/application/backend/src/main/resources/libs/bulma/components/title/title.html
@@ -17,11 +17,11 @@
 */-->
 
 <sly data-sly-use.model="pl.ds.bulma.components.models.TitleComponent">
-  <h1 id="${model.anchorId}" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '} ${model.textColorVariant}">
+  <h1 id="${model.anchorId}" data-sly-element="${model.element}" class="${model.titleClasses @ join=' '}">
     ${model.text}
   </h1>
   <sly data-sly-test="${model.addSubtitle}">
-    <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '} ${model.subtitleColorVariant}">
+    <h1 data-sly-element="${model.element}" class="${model.subtitleClasses @ join=' '}">
       ${model.subtitle}
     </h1>
   </sly>
