WOS-200 Button: added new icon mapping mechanism

--- a/application/backend/src/main/resources/libs/bulma/components/button/button.html
+++ b/application/backend/src/main/resources/libs/bulma/components/button/button.html
@@ -22,10 +22,10 @@
                 <sly data-sly-use.template="./template.html"
                      data-sly-call="${template.buttonContent @
              label=model.label, showIconLeft=model.showIconLeft,
-             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.iconLeft,
+             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.mappedIconLeft,
              iconSizeLeft=model.iconSizeLeft, iconContainerSizeLeft=model.iconContainerSizeLeft,
              showIconRight=model.showIconRight, iconLibTypeRight=model.iconLibTypeRight,
-             iconRight=model.iconRight, iconSizeRight=model.iconSizeRight,
+             iconRight=model.mappedIconRight, iconSizeRight=model.iconSizeRight,
              iconContainerSizeRight=model.iconContainerSizeRight}"></sly>
             </button>
         </sly>
@@ -36,10 +36,10 @@
                     <sly data-sly-use.template="./template.html"
                          data-sly-call="${template.buttonContent @
              label=model.label, showIconLeft=model.showIconLeft,
-             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.iconLeft,
+             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.mappedIconLeft,
              iconSizeLeft=model.iconSizeLeft, iconContainerSizeLeft=model.iconContainerSizeLeft,
              showIconRight=model.showIconRight, iconLibTypeRight=model.iconLibTypeRight,
-             iconRight=model.iconRight, iconSizeRight=model.iconSizeRight,
+             iconRight=model.mappedIconRight, iconSizeRight=model.iconSizeRight,
              iconContainerSizeRight=model.iconContainerSizeRight}"></sly>
                 </button>
             </sly>
@@ -49,10 +49,10 @@
                     <sly data-sly-use.template="./template.html"
                          data-sly-call="${template.buttonContent @
              label=model.label, showIconLeft=model.showIconLeft,
-             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.iconLeft,
+             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.mappedIconLeft,
              iconSizeLeft=model.iconSizeLeft, iconContainerSizeLeft=model.iconContainerSizeLeft,
              showIconRight=model.showIconRight, iconLibTypeRight=model.iconLibTypeRight,
-             iconRight=model.iconRight, iconSizeRight=model.iconSizeRight,
+             iconRight=model.mappedIconRight, iconSizeRight=model.iconSizeRight,
              iconContainerSizeRight=model.iconContainerSizeRight}"></sly>
                 </button>
             </sly>
@@ -64,10 +64,10 @@
             <sly data-sly-use.template="./template.html"
                  data-sly-call="${template.buttonContent @
              label=model.label, showIconLeft=model.showIconLeft,
-             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.iconLeft,
+             iconLibTypeLeft=model.iconLibTypeLeft, iconLeft=model.mappedIconLeft,
              iconSizeLeft=model.iconSizeLeft, iconContainerSizeLeft=model.iconContainerSizeLeft,
              showIconRight=model.showIconRight, iconLibTypeRight=model.iconLibTypeRight,
-             iconRight=model.iconRight, iconSizeRight=model.iconSizeRight,
+             iconRight=model.mappedIconRight, iconSizeRight=model.iconSizeRight,
              iconContainerSizeRight=model.iconContainerSizeRight}"></sly>
         </a>
     </sly>
