--- a/application/backend/src/main/resources/libs/bulma/components/tabs/tab/tab.html
+++ b/application/backend/src/main/resources/libs/bulma/components/tabs/tab/tab.html
@@ -28,7 +28,7 @@
                                     data-target="${item.label}">
                                     <a>
                                         <sly data-sly-test="${item.addIcon && item.icon}">
-                                                <span class="icon ${item.containerSize}"><i class="${item.iconLibType} ${item.iconSize} ${item.icon}"
+                                                <span class="icon ${item.containerSize}"><i class="${item.iconLibType} ${item.iconSize} ${item.mappedIcon}"
                                                                                aria-hidden="true"></i></span>
                                         </sly>
                                         <span>${item.label}</span>
@@ -58,8 +58,8 @@
     <sly data-sly-test="${!wcmmode.isEdit}">
         <li data-target="${resource.path}">
             <a>
-                <sly data-sly-test="${model.addIcon && model.icon}">
-                    <span class="icon ${model.containerSize}"><i class="${model.iconLibType} ${model.iconSize} ${model.icon}" aria-hidden="true"></i></span>
+                <sly data-sly-test="${model.addIcon && model.mappedIcon}">
+                    <span class="icon ${model.containerSize}"><i class="${model.iconLibType} ${model.iconSize} ${model.mappedIcon}" aria-hidden="true"></i></span>
                 </sly>
                 <span>${model.label}</span>
             </a>
